fix: 複数ストレージの表示とイベント同期を修正 (#12, #13)